Update Pyspark notebook

--- a/PySpark_Proyecto.ipynb
+++ b/PySpark_Proyecto.ipynb
@@ -1341,6 +1341,479 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Se realiza la categorización de las variables para analizar los datos de forma gráfica e intuir posibles clusters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Catergoría superficie\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:27:04 WARN TaskSetManager: Stage 66 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:27:05 WARN TaskSetManager: Stage 67 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "45941.71643756564"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_data.select(max('Surface')).first()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:27:23 WARN TaskSetManager: Stage 83 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:27:25 WARN TaskSetManager: Stage 84 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14.884534437442198"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "energy_data.select(min('Surface')).first()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:27:36 WARN TaskSetManager: Stage 100 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:27:37 WARN TaskSetManager: Stage 101 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:27:40 WARN TaskSetManager: Stage 117 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:27:42 WARN TaskSetManager: Stage 118 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "valor1=(energy_data.select(max('Surface')).first()[0]-energy_data.select(min('Surface')).first()[0])/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15308.9439677094"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valor1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:27:54 WARN TaskSetManager: Stage 134 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:27:56 WARN TaskSetManager: Stage 135 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:27:58 WARN TaskSetManager: Stage 151 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:00 WARN TaskSetManager: Stage 152 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "30617.8879354188"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valor2=(2*(energy_data.select(max('Surface')).first()[0]-energy_data.select(min('Surface')).first()[0]))/3\n",
+    "valor2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_data_categoria=energy_data.withColumn(\"Categoria_superficie\",\n",
+    "                                             when(energy_data[\"Surface\"]< valor1,\"Low\")\n",
+    "                                             .when((energy_data[\"Surface\"]>=valor1) & (energy_data[\"Surface\"]<=valor2),\"Medium\")\n",
+    "                                             .when(energy_data[\"Surface\"]>valor2,\"High\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:28:15 WARN TaskSetManager: Stage 168 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:17 WARN TaskSetManager: Stage 169 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "[Stage 173:>                (0 + 4) / 4][Stage 175:>                (0 + 0) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+------------------+-----------+------------------+--------------------+\n",
+      "|SiteId|             Value|Temperature|           Surface|Categoria_superficie|\n",
+      "+------+------------------+-----------+------------------+--------------------+\n",
+      "|    26|367090.93201896665|       11.0|14.884534437442198|                 Low|\n",
+      "|    26| 380214.5218407182|       9.95|14.884534437442198|                 Low|\n",
+      "|    26| 369513.9853800378|       9.35|14.884534437442198|                 Low|\n",
+      "|    26|356623.18967688765|        9.0|14.884534437442198|                 Low|\n",
+      "|    26| 440533.8594959018|       13.0|14.884534437442198|                 Low|\n",
+      "|    26|  423050.172770459|       12.0|14.884534437442198|                 Low|\n",
+      "|    26| 422010.9196915024|      11.75|14.884534437442198|                 Low|\n",
+      "|    26|187789.09143120135|       11.9|14.884534437442198|                 Low|\n",
+      "|    26|205557.23649427813|       10.2|14.884534437442198|                 Low|\n",
+      "|    26| 501100.9055731932|      15.25|14.884534437442198|                 Low|\n",
+      "|    26| 416228.3376006938|       16.9|14.884534437442198|                 Low|\n",
+      "|    26|286919.43586505123|       12.7|14.884534437442198|                 Low|\n",
+      "|    26|177929.62047344298|        9.9|14.884534437442198|                 Low|\n",
+      "|    26|371317.08299725526|       11.0|14.884534437442198|                 Low|\n",
+      "|    26| 528557.1559490501|       12.6|14.884534437442198|                 Low|\n",
+      "|    26| 408319.9314169953|       13.0|14.884534437442198|                 Low|\n",
+      "|    26|283132.34888359834|       12.9|14.884534437442198|                 Low|\n",
+      "|    26| 190720.4218742424|       13.0|14.884534437442198|                 Low|\n",
+      "|    26|194195.93089631625|       13.0|14.884534437442198|                 Low|\n",
+      "|    26| 433328.9112942513|       10.0|14.884534437442198|                 Low|\n",
+      "+------+------------------+-----------+------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "energy_data_categoria.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Categoría Temperatura"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:28:41 WARN TaskSetManager: Stage 180 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:43 WARN TaskSetManager: Stage 181 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:46 WARN TaskSetManager: Stage 197 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:47 WARN TaskSetManager: Stage 198 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "19.5"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valor1t=(energy_data.select(max('Temperature')).first()[0]-energy_data.select(min('Temperature')).first()[0])/3\n",
+    "valor1t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:28:50 WARN TaskSetManager: Stage 214 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:52 WARN TaskSetManager: Stage 215 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:54 WARN TaskSetManager: Stage 231 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:28:56 WARN TaskSetManager: Stage 232 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "39.0"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valor2t=(2*(energy_data.select(max('Temperature')).first()[0]-energy_data.select(min('Temperature')).first()[0]))/3\n",
+    "valor2t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_data_categoria=energy_data_categoria.withColumn(\"Categoria_temperatura\",\n",
+    "                                             when(energy_data[\"Temperature\"]< valor1t,\"Low\")\n",
+    "                                             .when((energy_data[\"Temperature\"]>=valor1t) & (energy_data[\"Temperature\"]<=valor2t),\"Medium\")\n",
+    "                                             .when(energy_data[\"Temperature\"]>valor2t,\"High\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:29:07 WARN TaskSetManager: Stage 248 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:29:09 WARN TaskSetManager: Stage 249 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "[Stage 253:>                (0 + 4) / 4][Stage 255:>                (0 + 0) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+------------------+-----------+------------------+--------------------+---------------------+\n",
+      "|SiteId|             Value|Temperature|           Surface|Categoria_superficie|Categoria_temperatura|\n",
+      "+------+------------------+-----------+------------------+--------------------+---------------------+\n",
+      "|    26|367090.93201896665|       11.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 380214.5218407182|       9.95|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 369513.9853800378|       9.35|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|356623.18967688765|        9.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 440533.8594959018|       13.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|  423050.172770459|       12.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 422010.9196915024|      11.75|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|187789.09143120135|       11.9|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|205557.23649427813|       10.2|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 501100.9055731932|      15.25|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 416228.3376006938|       16.9|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|286919.43586505123|       12.7|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|177929.62047344298|        9.9|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|371317.08299725526|       11.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 528557.1559490501|       12.6|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 408319.9314169953|       13.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|283132.34888359834|       12.9|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 190720.4218742424|       13.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26|194195.93089631625|       13.0|14.884534437442198|                 Low|                  Low|\n",
+      "|    26| 433328.9112942513|       10.0|14.884534437442198|                 Low|                  Low|\n",
+      "+------+------------------+-----------+------------------+--------------------+---------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "energy_data_categoria.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:29:36 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "23/09/30 18:29:36 WARN TaskSetManager: Stage 260 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:29:38 WARN TaskSetManager: Stage 261 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "[Stage 271:==========================================>              (3 + 1) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+------------------+------------------+------------------+\n",
+      "|summary|            SiteId|             Value|       Temperature|           Surface|\n",
+      "+-------+------------------+------------------+------------------+------------------+\n",
+      "|  count|            461657|            461657|            461657|            461657|\n",
+      "|   mean|24.663496925206378|               NaN|15.352342648329783| 7842.770209321546|\n",
+      "| stddev|16.308090952738763|               NaN| 7.549441141209245| 9943.059596669997|\n",
+      "|    min|                 2|               0.0|             -14.0|14.884534437442198|\n",
+      "|    25%|                 8| 6330.254625869551|             10.05| 1032.735063490691|\n",
+      "|    50%|                22| 22231.01067951837|              15.0| 6098.278376070084|\n",
+      "|    75%|                40|47657.267569256874|              20.1|  9150.19537329732|\n",
+      "|    max|                57|               NaN|              44.5| 45941.71643756564|\n",
+      "+-------+------------------+------------------+------------------+------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "energy_data.summary().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/09/30 18:29:51 WARN TaskSetManager: Stage 277 contains a task of very large size (16946 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "23/09/30 18:29:53 WARN TaskSetManager: Stage 278 contains a task of very large size (6901 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "consumomax=energy_data.select(max('Value')).first()[0]\n",
+    "consumomax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
